<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculoViagemActivity">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="30dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edtDistancia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dist_ncia_km"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/edtPrecoCombustivel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pre_o_do_combust_vel_r"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/edtMediaConsumo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/m_dia_km_l"
            android:inputType="numberDecimal"/>

        <Button
            android:id="@+id/btnCalcularViagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calcular"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/txtResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultado_aparecer_aqui"
            android:layout_marginTop="20dp"
            android:textSize="18sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>